[package]
name = "rocks-tables"
version = "0.3.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[features]
default = []

[dependencies]
aes-gcm = { version = "0.6", optional = true }
bincode = "1.3"
rocksdb = { version = "0.14", default-features = false, features = ["zstd"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[package.metadata.release]
no-dev-version = true
